==> openweave/openweave-core/src/adaptations/device-layer/nRF5/BLEManagerImpl.cpp <==
#include <Weave/DeviceLayer/internal/WeaveDeviceLayerInternal.h>
#include <Weave/DeviceLayer/internal/BLEManager.h>
#include <new>
#include "nrf_error.h"
#include "ble.h"
#include "ble_gap.h"
#include "ble_gattc.h"
#include "ble_advdata.h"
#include "ble_srv_common.h"
#include "nrf_ble_gatt.h"
#define NRF_LOG_MODULE_NAME weave
#include "nrf_log.h"

WEAVE_ERROR BLEManagerImpl::_Init()
{
    WEAVE_ERROR err;
    uint16_t svcHandle;
    ble_add_char_params_t addCharParams;

    mServiceMode = ConnectivityManager::kWoBLEServiceMode_Enabled;
    mFlags = kFlag_AdvertisingEnabled;
    memset(mDeviceName, 0, sizeof(mDeviceName));
    mAdvHandle = BLE_GAP_ADV_SET_HANDLE_NOT_SET;
    mNumGAPCons = 0;
    for (int i = 0; i < kMaxConnections; i++)
    {
        mSubscribedConIds[i] = BLE_CONNECTION_UNINITIALIZED;
    }

    // Initialize the Weave BleLayer.
    err = BleLayer::Init(this, this, &SystemLayer);
    SuccessOrExit(err);

    // Register vendor-specific UUIDs with the soft device.
    //     NOTE: An NRF_ERROR_NO_MEM here means the soft device hasn't been configured
    //     with space for enough custom UUIDs.  Typically, this limit is set by overriding
    //     the NRF_SDH_BLE_VS_UUID_COUNT config option.
    err = RegisterVendorUUID(UUID_WoBLEChar_RX, UUID128_WoBLEChar_RX);
    SuccessOrExit(err);
    err = RegisterVendorUUID(UUID_WoBLEChar_TX, UUID128_WoBLEChar_TX);
    SuccessOrExit(err);

    // Add the WoBLE service.
    err = sd_ble_gatts_service_add(BLE_GATTS_SRVC_TYPE_PRIMARY, (ble_uuid_t *)&UUID_WoBLEService, &svcHandle);
    SuccessOrExit(err);

    // Add the WoBLEChar_RX characteristic to the WoBLE service.
    memset(&addCharParams, 0, sizeof(addCharParams));
    addCharParams.uuid = UUID_WoBLEChar_RX.uuid;
    addCharParams.uuid_type = UUID_WoBLEChar_RX.type;
    addCharParams.max_len = NRF_SDH_BLE_GATT_MAX_MTU_SIZE;
    addCharParams.init_len = 0;
    addCharParams.is_var_len = true;
    addCharParams.char_props.write_wo_resp = 1;
    addCharParams.char_props.write = 1;
    addCharParams.read_access = SEC_OPEN;
    addCharParams.write_access = SEC_OPEN;
    addCharParams.cccd_write_access = SEC_NO_ACCESS;
    err = characteristic_add(svcHandle, &addCharParams, &mWoBLECharHandle_RX);
    SuccessOrExit(err);

    // Add the WoBLEChar_TX characteristic.
    memset(&addCharParams, 0, sizeof(addCharParams));
    addCharParams.uuid = UUID_WoBLEChar_TX.uuid;
    addCharParams.uuid_type = UUID_WoBLEChar_TX.type;
    addCharParams.max_len = NRF_SDH_BLE_GATT_MAX_MTU_SIZE;
    addCharParams.is_var_len = true;
    addCharParams.char_props.read = 1;
    addCharParams.char_props.write = 1;
    addCharParams.char_props.indicate = 1;
    addCharParams.read_access = SEC_OPEN;
    addCharParams.write_access = SEC_OPEN;
    addCharParams.cccd_write_access = SEC_OPEN;
    err = characteristic_add(svcHandle, &addCharParams, &mWoBLECharHandle_TX);
    SuccessOrExit(err);

    // Initialize the nRF5 GATT module and set the allowable GATT MTU and GAP packet sizes
    // based on compile-time config values.
    err = nrf_ble_gatt_init(&GATTModule, NULL);
    SuccessOrExit(err);
    err = nrf_ble_gatt_att_mtu_periph_set(&GATTModule, NRF_SDH_BLE_GATT_MAX_MTU_SIZE);
    SuccessOrExit(err);
    err = nrf_ble_gatt_data_length_set(&GATTModule, BLE_CONN_HANDLE_INVALID, NRF_SDH_BLE_GAP_DATA_LENGTH);
    SuccessOrExit(err);

    // Register a handler for BLE events.
    NRF_SDH_BLE_OBSERVER(sBLEObserver, WEAVE_DEVICE_LAYER_BLE_OBSERVER_PRIORITY, SoftDeviceBLEEventCallback, NULL);

    // Set a default device name.
    err = _SetDeviceName(NULL);
    SuccessOrExit(err);

    // TODO: call sd_ble_gap_ppcp_set() to set gap parameters

    PlatformMgr().ScheduleWork(DriveBLEState, 0);

exit:
    WeaveLogProgress(DeviceLayer, "BLEManagerImpl::Init() complete");
    return err;
}

void BLEManagerImpl::_OnPlatformEvent(const WeaveDeviceEvent * event)
{
    switch (event->Type)
    {
    case DeviceEventType::kSoftDeviceBLEEvent:
        HandleSoftDeviceBLEEvent(event);
        break;

    case DeviceEventType::kWoBLERXCharWriteEvent:
        HandleRXCharWrite(event);
        break;

    case DeviceEventType::kWoBLEOutOfBuffersEvent:
        WeaveLogError(DeviceLayer, "BLEManagerImpl: Out of buffers during WoBLE RX");
        break;

    default:
        break;
    }
}

bool BLEManagerImpl::CloseConnection(BLE_CONNECTION_OBJECT conId)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;

    WeaveLogProgress(DeviceLayer, "Closing BLE GATT connection (con %u)", conId);

    // Initiate a GAP disconnect.
    err = sd_ble_gap_disconnect(conId, BLE_HCI_REMOTE_USER_TERMINATED_CONNECTION);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "sd_ble_gap_disconnect() failed: %s", ErrorStr(err));
    }

    return (err == WEAVE_NO_ERROR);
}

bool BLEManagerImpl::SendIndication(BLE_CONNECTION_OBJECT conId, const WeaveBleUUID * svcId, const WeaveBleUUID * charId, PacketBuffer * data)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    ble_gatts_hvx_params_t hvxParams;
    uint16_t dataLen = data->DataLength();

    VerifyOrExit(IsSubscribed(conId), err = WEAVE_ERROR_INVALID_ARGUMENT);

    WeaveLogDetail(DeviceLayer, "Sending indication for WoBLE TX characteristic (con %u, len %u)", conId, dataLen);

    // Send a indication for the WoBLE TX characteristic to the client containing the supplied data.
    // Note that this call copies the data from the buffer.
    memset(&hvxParams, 0, sizeof(hvxParams));
    hvxParams.type = BLE_GATT_HVX_INDICATION;
    hvxParams.handle = mWoBLECharHandle_TX.value_handle;
    hvxParams.offset = 0;
    hvxParams.p_len = &dataLen;
    hvxParams.p_data = data->Start();
    err = sd_ble_gatts_hvx(conId, &hvxParams);
    SuccessOrExit(err);

    // TODO: remove me
    memset(data->Start(), 0xAB, dataLen);

exit:
    PacketBuffer::Free(data);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "BLEManagerImpl::SendIndication() failed: %s", ErrorStr(err));
        return false;
    }
    return true;
}

void BLEManagerImpl::DriveBLEState(void)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;

    // If the application has enabled WoBLE and BLE advertising...
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && GetFlag(mFlags, kFlag_AdvertisingEnabled))
    {
        // Start/re-start advertising if not already started, or if there is a pending change
        // to the advertising configuration.
        if (!GetFlag(mFlags, kFlag_Advertising) || GetFlag(mFlags, kFlag_AdvertisingConfigChangePending))
        {
            err = StartAdvertising();
            SuccessOrExit(err);
        }
    }

    // Otherwise, stop advertising if it is enabled.
    else if (GetFlag(mFlags, kFlag_AdvertisingEnabled))
    {
        err = StopAdvertising();
        SuccessOrExit(err);
    }

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "Disabling WoBLE service due to error: %s", ErrorStr(err));
        mServiceMode = ConnectivityManager::kWoBLEServiceMode_Disabled;
    }
}

WEAVE_ERROR BLEManagerImpl::StartAdvertising(void)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    ble_gap_adv_data_t gapAdvData;
    ble_gap_adv_params_t gapAdvParams;
    uint16_t numWoBLECons;
    bool connectable;

    // Clear any "pending change" flag.
    ClearFlag(mFlags, kFlag_AdvertisingConfigChangePending);

    // Force the soft device to relinquish its references to the buffers containing the advertising
    // data.  This ensures the soft device is not accessing these buffers while we are encoding
    // new advertising data into them.
    if (GetFlag(mFlags, kFlag_Advertising))
    {
        ClearFlag(mFlags, kFlag_Advertising);

        err = sd_ble_gap_adv_stop(mAdvHandle);
        SuccessOrExit(err);

        err = sd_ble_gap_adv_set_configure(&mAdvHandle, NULL, NULL);
        SuccessOrExit(err);
    }

    // Encode the data that will be sent in the advertising packet and the scan response packet.
    err = EncodeAdvertisingData(gapAdvData);
    SuccessOrExit(err);

    // Set advertising parameters.
    memset(&gapAdvParams, 0, sizeof(gapAdvParams));
    gapAdvParams.primary_phy     = BLE_GAP_PHY_1MBPS;
    gapAdvParams.duration        = BLE_GAP_ADV_TIMEOUT_GENERAL_UNLIMITED;
    gapAdvParams.filter_policy   = BLE_GAP_ADV_FP_ANY;

    // Advertise connectable if we haven't reached the maximum number of WoBLE connections or the
    // maximum number of GAP connections.  (Note that the SoftDevice will return an error if connectable
    // advertising is requested when the max number of GAP connections exist).
    numWoBLECons = NumConnections();
    connectable = (numWoBLECons < kMaxConnections && mNumGAPCons < NRF_SDH_BLE_PERIPHERAL_LINK_COUNT);
    gapAdvParams.properties.type = connectable
            ? BLE_GAP_ADV_TYPE_CONNECTABLE_SCANNABLE_UNDIRECTED
            : BLE_GAP_ADV_TYPE_NONCONNECTABLE_SCANNABLE_UNDIRECTED;

    // Advertise in fast mode if not paired to an account and there are no WoBLE connections, or
    // if the application has requested fast advertising.
    gapAdvParams.interval =
        ((numWoBLECons == 0 && !ConfigurationMgr().IsPairedToAccount()) || GetFlag(mFlags, kFlag_AdvertisingEnabled))
        ? WEAVE_DEVICE_CONFIG_BLE_FAST_ADVERTISING_INTERVAL
        : WEAVE_DEVICE_CONFIG_BLE_SLOW_ADVERTISING_INTERVAL;

    WeaveLogProgress(DeviceLayer, "Configuring BLE advertising (interval %" PRIu32 " ms, %sconnectable, device name %s)",
             (((uint32_t)gapAdvParams.interval) * 10) / 16,
             (connectable) ? "" : "non-",
             mDeviceName);

    // Configure an "advertising set" in the BLE soft device with the data and parameters for Weave advertising.
    // If the advertising set doesn't exist, this call will create it and return its handle.
    err = sd_ble_gap_adv_set_configure(&mAdvHandle, &gapAdvData, &gapAdvParams);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "sd_ble_gap_adv_set_configure() failed: %s", ErrorStr(err));
    }
    SuccessOrExit(err);

    // Instruct the BLE soft device to start advertising using the configured advertising set.
    err = sd_ble_gap_adv_start(mAdvHandle, WEAVE_DEVICE_LAYER_BLE_CONN_CFG_TAG);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "sd_ble_gap_adv_start() failed: %s", ErrorStr(err));
    }
    SuccessOrExit(err);

    // Record that advertising has been enabled.
    SetFlag(mFlags, kFlag_Advertising);

exit:
    return err;
}

void BLEManagerImpl::DriveBLEState(intptr_t arg)
{
    sInstance.DriveBLEState();
}

WEAVE_ERROR BLEManagerImpl::HandleRXCharWrite(const WeaveDeviceEvent * event)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    PacketBuffer * buf = event->Platform.RXCharWriteEvent.Data;

    // Only allow write requests or write commands.
    VerifyOrExit((event->Platform.RXCharWriteEvent.WriteArgs.op == BLE_GATTS_OP_WRITE_REQ ||
                  event->Platform.RXCharWriteEvent.WriteArgs.op == BLE_GATTS_OP_WRITE_CMD),
                 err = WEAVE_ERROR_INVALID_ARGUMENT);

    // NB: The initial write to the RX characteristic happens *before* the client enables
    // indications on the TX characteristic.

    WeaveLogDetail(DeviceLayer, "Write request/command received for WoBLE RX characteristic (con %" PRIu16 ", len %" PRIu16 ")",
                   event->Platform.RXCharWriteEvent.ConId, buf->DataLength());

    // Pass the data to the BLEEndPoint
    HandleWriteReceived(event->Platform.RXCharWriteEvent.ConId, &WEAVE_BLE_SVC_ID, &WeaveUUID_WoBLEChar_RX, buf);
    buf = NULL;

exit:
    PacketBuffer::Free(buf);
    return err;
}

WEAVE_ERROR BLEManagerImpl::HandleTXCharCCCDWrite(const WeaveDeviceEvent * event)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    const ble_gatts_evt_t * gattsEvent = &event->Platform.SoftDeviceBLEEvent.EventData.evt.gatts_evt;
    bool indicationsEnabled;
    enum
    {
        // Per the BLE GATT spec...
        kCCCDBit_NotificationsEnabled       = 0x0001,
        kCCCDBit_IndicationsEnabled         = 0x0002,
    };

    // Only allow write requests or write commands.
    VerifyOrExit((gattsEvent->params.write.op == BLE_GATTS_OP_WRITE_REQ || gattsEvent->params.write.op == BLE_GATTS_OP_WRITE_CMD),
                 err = WEAVE_ERROR_INVALID_ARGUMENT);

    WeaveLogDetail(DeviceLayer, "Write request/command received for WoBLE TX CCCD characteristic (con %" PRIu16 ", len %" PRIu16 ")",
                   gattsEvent->conn_handle, gattsEvent->params.write.len);

    // Ignore the write request if the value is 0 length.
    VerifyOrExit(gattsEvent->params.write.len > 0, /**/);

    WeaveLogDetail(DeviceLayer, "CCCD value: 0x%04" PRIx16, (((uint16_t)gattsEvent->params.write.data[1]) << 8) | gattsEvent->params.write.data[0]);

    // Determine if the client is enabling or disabling indications.
    indicationsEnabled = ((gattsEvent->params.write.data[0] & kCCCDBit_IndicationsEnabled) != 0);

    // If the client has requested to enabled indications...
    if (indicationsEnabled)
    {
        // If indications are not already enabled for the connection...
        if (!IsSubscribed(gattsEvent->conn_handle))
        {
            // Record that indications have been enabled for this connection.  If this fails because
            // there are too many WoBLE connections, simply ignore client's attempt to subscribe.
            err = SetSubscribed(gattsEvent->conn_handle);
            VerifyOrExit(err != WEAVE_ERROR_NO_MEMORY, err = WEAVE_NO_ERROR);
            SuccessOrExit(err);

            // Alert the BLE layer that WoBLE "subscribe" has been received.
            HandleSubscribeReceived(gattsEvent->conn_handle, &WEAVE_BLE_SVC_ID, &WeaveUUID_WoBLEChar_TX);

#if WEAVE_PROGRESS_LOGGING
            {
                uint16_t gattMTU;
                uint8_t packetDataLen;

                gattMTU = nrf_ble_gatt_eff_mtu_get(&GATTModule, gattsEvent->conn_handle);
                nrf_ble_gatt_data_length_get(&GATTModule, gattsEvent->conn_handle, &packetDataLen);
                WeaveLogProgress(DeviceLayer, "WoBLE connection established (con %" PRIu16 ", packet data len %" PRIu8 ", GATT MTU %" PRIu16 ")",
                        gattsEvent->conn_handle, packetDataLen, gattMTU);
            }
#endif // WEAVE_PROGRESS_LOGGING

            // Post a WoBLEConnectionEstablished event to the DeviceLayer and the application.
            {
                WeaveDeviceEvent conEstEvent;
                conEstEvent.Type = DeviceEventType::kWoBLEConnectionEstablished;
                PlatformMgr().PostEvent(&conEstEvent);
            }
        }
    }

    else
    {
        // If indications had previously been enabled for this connection, record that they are no longer
        // enabled and inform the BLE layer that the client has "unsubscribed" the connection.
        if (UnsetSubscribed(gattsEvent->conn_handle))
        {
            HandleUnsubscribeReceived(gattsEvent->conn_handle, &WEAVE_BLE_SVC_ID, &WeaveUUID_WoBLEChar_TX);
        }
    }

exit:
    return err;
}
